# schools

./: .gitignore  analysis copy.ipynb  analysis.ipynb  analysis_finance copy.ipynb  analysis_finance.ipynb  pyproject.toml
data/: .gitignore
tessa/: load_data.py
